# BioM3-dev

./: .gitignore  CLAUDE.md  README.md  _notes.md  _setup_notes.md  environment.sh  job_finetune_v1_n2.pbs  job_pretrain_interactive.pbs  job_pretrain_interactive.sh  job_pretrain_prod.pbs  job_pretrain_scratch_v1_n2.pbs  pyproject.toml  requirements.txt  requirements_aurora.txt  requirements_aurora_03112026.txt  requirements_orig.txt  requirements_polaris.txt  setup.py
_myscripts/: check_subset.py  subset_data.py
arglists/: config_1node_1gpu.sh  config_1node_2gpu.sh  config_1node_4gpu.sh  config_finetune_v1.sh  config_finetune_v2.sh  config_pretrain_scratch_v1.sh  config_pretrain_scratch_v2.sh  config_pretrain_scratch_v3.sh  config_pretrain_start_pfam_v1.sh  config_pretrain_start_pfam_v2.sh
configs/: app_settings.json  config.yaml  config_1node_2gpu.yaml  config_2node_2gpu.yaml  dbio_config.json  flat_config.yaml  stage1_config_PenCL_inference.json  stage2_config_Facilitator_sample.json  stage3_config_ProteoScribe_sample.json
configs/benchmark/: stage3_bm_generation_ProteoScribe_1block_v1_aurora_v0.json  stage3_bm_generation_ProteoScribe_1block_v1_aurora_v1.json  stage3_bm_training_ProteoScribe_1block_v1_spark_v0.json  stage3_generation_example.json  stage3_training_example.json
configs/data/: swissprot_pfam.yaml
configs/dataset/: base.yaml  swissprot_pfam_last_ckpt_all.yaml  swissprot_pfam_subset_1000.yaml
configs/deepspeed/: default.yaml
configs/grpo/: _base_grpo.json  example_gdpo.json  example_grpo.json  pre_unmask_sh3.json  production_gdpo.json  production_grpo.json
configs/hydra_config/: config_1node_4gpu.yaml  config_2node_1gpu.yaml  config_2node_4gpu.yaml  config_8gpus.yaml  default.yaml
configs/inference/: stage3_ProteoScribe_sample.json
configs/logging/: stage3.yaml
configs/model/: model_v1.yaml  transformer.yaml
configs/optimizer/: adamw.yaml  base.yaml
configs/runtime/: polaris.yaml
configs/stage1_training/: pretrain_pfam_v1.json  pretrain_scratch_v1.json
configs/stage2_training/: pretrain_scratch_v1.json
configs/stage3_training/: finetune_v1.json  finetune_v2.json  pretrain_scratch_v1.json  pretrain_scratch_v2.json  pretrain_scratch_v3.json  pretrain_start_pfam_v1.json  pretrain_start_pfam_v2.json
configs/training/: finetune_v1.json  finetune_v2.json  pretrain_scratch_v1.json  pretrain_scratch_v2.json  pretrain_scratch_v3.json  pretrain_start_pfam_v1.json  pretrain_start_pfam_v2.json
configs/wandb/: defaults.yaml
data/: README.md
demo/: README.md  build_sh3_dataset.py  build_sh3_dataset.sh  build_source_datasets.sh  custom_caption_format.py  minimal_pfam_extract.py
demos/: README.md  animate_generation.sh  build_sh3_dataset.sh  build_source_datasets.sh  custom_caption_format.py  minimal_pfam_extract.py
demos/SH3/: run_gen_seqs_SH3.sh  run_gen_seqs_SH3_prompts.sh  run_prep_all_dataset_with_prompts.sh
docs/: BUG_axial_positional_embedding_keys.md  CLI_reference.md  SETUP_AURORA.md  SETUP_POLARIS.md  SETUP_SPARK.md  aurora_distributed_training.md  building_datasets_with_dbio.md  contributing.md  database_linkage.md  dbio_examples.md  debug_aurora.md  embedding_pipeline.md  gdpo_finetuning.md  grpo_finetuning.md  gumbel_max_sampling.md  sequence_generation_animation.md  sequence_generation_strategies.md  setup_aurora.md  setup_cpu.md  setup_databases.md  setup_polaris.md  setup_shared_weights.md  setup_spark.md  stage3_training.md  structure_visualization.md  training_csv_provenance.md  versioning.md  web_app.md
docs/.claude_prompts/: 2026-04-25_aurora-hang-handoff.md  2026-04-26_alcf-ticket-draft.md  PROMPT_2026-04-27_docs_and_scripts.md  PROMPT_grpo_integration.md  PROMPT_webapp_development.md
docs/.claude_sessions/: 2026-03-27_data_prep_and_pipeline.md  2026-03-28_job_templates_and_fixes.md  2026-03-28_rank-aware-logging.md  2026-03-29_checkpoint_consolidation_cleanup.md  2026-03-29_job_templates_and_finetuning_fix.md  2026-03-29_multinode_logging_fixes.md  2026-03-29_stage1_inference_perf.md  2026-03-30_parallelize_stage3_across_prompts.md  2026-03-30_shared_weights_path_rename.md  2026-03-30_wandb_default_off.md  2026-03-31_dbio_subpackage_and_database_sync.md  2026-04-01_dbio_enrichment_and_taxonomy.md  2026-04-01_dual_logging_manifest_and_taxonomy_fix.md  2026-04-01_source_dataset_builders.md  2026-04-01_training_build_manifest.md  2026-04-02_annotation_cache_and_dataset_validation.md  2026-04-02_source_builders_and_caption_generalization.md  (+56 more)
jobs/: PL_loop_Stage3_phase2_pretraining.pbs  job_submit  job_test_hydra_1node_1gpu.pbs  job_test_hydra_1node_2gpu.pbs  job_test_hydra_1node_4gpu.pbs  job_test_hydra_2node_1gpu.pbs  job_test_hydra_2node_2gpu.pbs  job_test_hydra_2node_4gpu.pbs  job_test_multinode_8gpus.pbs  job_test_nohydra_1node_1gpu.pbs  job_test_nohydra_1node_2gpu.pbs  job_test_nohydra_1node_4gpu.pbs  old_job_test_2gpus.pbs
scripts/: PL_train_stage3.old.py  PL_train_stage3.py  PL_train_transformer.sh  PL_train_transformer_production.sh  _orig_PL_train_stage3.py  _wandb_resolve.sh  benchmark_generation.py  diagnose_hang.sh  embedding_pipeline.sh  eval_grpo_checkpoint.py  gdpo_train_singlenode.sh  grpo_train_singlenode.sh  hydra_PL_train_transformer.sh  hydrawrap_PL_train_stage3.py  link_data.sh  link_weights.sh  make_grpo_synthetic_eval.py  make_stage3_benchmark_dataset.py  multinode_PL_train_stage3.py  plot_benchmark.py  run_Stage3_phase2_pretraining.sh  run_gdpo_smoke_5steps.sh  run_gdpo_smoke_multixpu.sh  run_grpo_smoke_5steps.sh  seqgen_wrapper.sh  stage1_train_multinode.sh  stage1_train_singlenode.sh  stage2_train_multinode.sh  stage2_train_singlenode.sh  stage3_finetuning.sh  stage3_pretraining.sh  stage3_train_multinode.sh  stage3_train_singlenode.sh  sync_databases.sh  sync_weights.sh  test_run copy.sh  test_run.sh  test_stage3_multinode.sh  train_grpo_surrogate.py
tests/: conftest.py  test_imports.py  test_stage1_run_PenCL_inference.py  test_stage2_run_Facilitator_sample.py  test_stage3_run_PL_training.py  test_stage3_run_ProteoScribe_sample.py
weights/: README.md
(+455 files in other folders)
