[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "biom3"
version = "0.0.1"
requires-python = ">= 3.8"
readme = "README.md"
description = "BioM3 development and investigation."
authors = [
  {name = "The BioM3 team"},
]

[project.optional-dependencies]
app = [
  "streamlit",
  "py3Dmol",
  "biopython",
  "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"biom3.app" = ["*.json"]

[project.scripts]
biom3_pretrain_stage3 = "biom3.Stage3.__main__:run_stage3_pretraining"
biom3_PenCL_inference = "biom3.Stage1.__main__:run_PenCL_inference"
biom3_Facilitator_sample = "biom3.Stage2.__main__:run_Facilitator_sample"
biom3_ProteoScribe_sample = "biom3.Stage3.__main__:run_ProteoScribe_sample"
biom3_compile_hdf5 = "biom3.data_prep.__main__:run_compile_hdf5"
biom3_embedding_pipeline = "biom3.pipeline.__main__:run_embedding_pipeline"
biom3_build_dataset = "biom3.dbio.__main__:run_build_dataset"
biom3_build_taxid_index = "biom3.dbio.__main__:run_build_taxid_index"
biom3_convert_to_parquet = "biom3.dbio.__main__:run_convert_to_parquet"
biom3_build_source_swissprot = "biom3.dbio.__main__:run_build_source_swissprot"
biom3_build_source_pfam = "biom3.dbio.__main__:run_build_source_pfam"
biom3_build_annotation_cache = "biom3.dbio.__main__:run_build_annotation_cache"
biom3_app = "biom3.app:main"
