[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "biom3"
dynamic = ["version"]
requires-python = ">= 3.10"
readme = "README.md"
description = "BioM3 development and investigation."
authors = [
  {name = "The BioM3 team"},
]

[project.optional-dependencies]
app = [
  "streamlit",
  "py3Dmol",
  "biopython",
  "matplotlib",
  "imageio-ffmpeg",
]
grpo = [
  "fair-esm",
]

[tool.setuptools.dynamic]
version = {attr = "biom3.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"biom3.app" = ["*.json"]

[project.scripts]
biom3_train_stage1 = "biom3.Stage1.__main__:run_stage1_training"
biom3_train_stage2 = "biom3.Stage2.__main__:run_stage2_training"
biom3_train_stage3 = "biom3.Stage3.__main__:run_stage3_training"
biom3_PenCL_inference = "biom3.Stage1.__main__:run_PenCL_inference"
biom3_Facilitator_sample = "biom3.Stage2.__main__:run_Facilitator_sample"
biom3_ProteoScribe_sample = "biom3.Stage3.__main__:run_ProteoScribe_sample"
biom3_grpo_train = "biom3.rl.__main__:run_grpo_train"
biom3_compile_hdf5 = "biom3.data_prep.__main__:run_compile_hdf5"
biom3_embedding_pipeline = "biom3.pipeline.__main__:run_embedding_pipeline"
biom3_build_dataset = "biom3.dbio.__main__:run_build_dataset"
biom3_build_taxid_index = "biom3.dbio.__main__:run_build_taxid_index"
biom3_convert_to_parquet = "biom3.dbio.__main__:run_convert_to_parquet"
biom3_build_source_swissprot = "biom3.dbio.__main__:run_build_source_swissprot"
biom3_build_source_pfam = "biom3.dbio.__main__:run_build_source_pfam"
biom3_build_source_trembl = "biom3.dbio.__main__:run_build_source_trembl"
biom3_build_source_expasy = "biom3.dbio.__main__:run_build_source_expasy"
biom3_build_source_smart = "biom3.dbio.__main__:run_build_source_smart"
biom3_build_source_brenda = "biom3.dbio.__main__:run_build_source_brenda"
biom3_build_annotated_pfam_subsets = "biom3.dbio.__main__:run_build_annotated_pfam_subsets"
biom3_build_annotation_cache = "biom3.dbio.__main__:run_build_annotation_cache"
biom3_app = "biom3.app:main"
biom3_benchmark_stage3_generation = "biom3.benchmarks.__main__:run_benchmark_stage3_generation"
biom3_benchmark_stage3_training = "biom3.benchmarks.__main__:run_benchmark_stage3_training"
biom3_plot_benchmark = "biom3.benchmarks.__main__:run_plot_benchmark"

[tool.pytest.ini_options]
filterwarnings = [
    # torch: env-var override for weights_only (we set TORCH_FORCE_NO_WEIGHTS_ONLY_LOAD)
    "ignore:Environment variable TORCH_FORCE_NO_WEIGHTS_ONLY_LOAD:UserWarning",
    # torch: GPU compute-capability mismatch on DGX Spark (sm_121a / CUDA 12.1)
    "ignore:.*Found GPU:UserWarning",
    # matplotlib internals (pyparsing deprecations)
    "ignore:.*oneOf.*deprecated:DeprecationWarning",
    "ignore:.*parseString.*deprecated:DeprecationWarning",
    "ignore:.*resetCache.*deprecated:DeprecationWarning",
    "ignore:.*enablePackrat.*deprecated:DeprecationWarning",
    # deepspeed pydantic deprecation
    "ignore:.*model_fields.*deprecated:DeprecationWarning",
    # pytorch_lightning: num_workers suggestion (test data is tiny)
    "ignore:.*does not have many workers.*:UserWarning",
    # pytorch_lightning: sync_dist suggestion (single-GPU tests)
    "ignore:.*sync_dist=True.*:UserWarning",
    # multiprocessing fork() deprecation in multi-threaded process
    "ignore:.*multi-threaded.*use of fork:DeprecationWarning",
    # transformers: BertForMaskedLM GenerationMixin inheritance
    "ignore:.*has generative capabilities.*:UserWarning",
    # pytree LeafSpec / treespec deprecations
    "ignore:.*LeafSpec.*is deprecated:FutureWarning",
    "ignore:.*isinstance.*treespec:FutureWarning",
]
